fix bug dropdown in apexchart, update spacing wrapper progress chart in page StackingID

--- a/src/assets/scss/custom/apexchart.scss
+++ b/src/assets/scss/custom/apexchart.scss
@@ -6,7 +6,18 @@
         color: white;
     } 
 }
-.apexcharts-menu-open {
+.apexcharts-menu.apexcharts-menu-open {
     background-color: var(--slate-900);
-    border: 1px color $primary;
+    border: 1px solid $primary;
+}
+.apexcharts-menu-item:hover {
+    background: var(--slate-700) !important;
+}
+.apexcharts-menu-icon, .apexcharts-pan-icon, .apexcharts-reset-icon, .apexcharts-selection-icon, .apexcharts-toolbar-custom-icon, .apexcharts-zoom-icon, .apexcharts-zoomin-icon, .apexcharts-zoomout-icon {
+    &:hover svg {
+        fill: white !important;
+    }
+}
+.apexcharts-toolbar {
+    z-index: 9 !important;
 }
