--- a/src/assets/scss/custom/custom.scss
+++ b/src/assets/scss/custom/custom.scss
@@ -77,6 +77,18 @@
     &-delegate {
         background-color: $delegate !important;
     }
+    &-gray-1 {
+        background-color: $gray-1 !important;
+    }
+    &-gray-2 {
+        background-color: $gray-2 !important;
+    }
+    &-gray-3 {
+        background-color: $gray-3 !important;
+    }
+    &-gray-4 {
+        background-color: $gray-4 !important;
+    }
 }
 .hover\: {
     &bg-orange:hover {
