--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,7 +7,7 @@
 @import './custom/table.scss';
 
 option {
-    background-color: var(--slate-800);
+    background-color: var(--slate-900);
     color: white;
 }
 
